--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -1,195 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HambaOnline - Book Buses Across Southern Africa</title>
-  <meta name="description" content="Book intercity and cross-border buses across Southern Africa with HambaOnline. Trusted operators, instant booking, and route comparisons." />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- SEO Meta Tags -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Book intercity bus tickets across Southern Africa with HambaOnline. Compare fares, trusted operators, and enjoy instant booking." />
+    <meta name="keywords" content="bus booking, HambaOnline, Southern Africa buses, intercity transport, bus tickets online" />
+    <meta name="author" content="HambaOnline" />
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="HambaOnline - Book Buses Across Southern Africa" />
+  <meta property="og:description" content="Compare and book bus tickets across Southern Africa with trusted operators. Fast, simple, reliable." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://hambaonline.com" />
+  <meta property="og:image" content="https://hambaonline.com/assets/preview.jpg" />
+
+    <title>HambaOnline - Book Buses Across Southern Africa</title>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+      <meta name="description" content="Book intercity and cross-border buses across Southern Africa with HambaOnline. Trusted operators, instant booking, and route comparisons." />
   <link rel="canonical" href="https://hambaonline.com/" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" media="all">
 
-  <style>
-    :root {
-      --primary-color: #004aad;
-      --text-color: #333;
-      --bg-color: #f7f9fc;
-      --neon-green: #00FF00;
-    }
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f7f9fc;
+            color: #333;
+        }
 
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-    }
+        header {
+            background-color: #004aad;
+            color: white;
+            padding: 40px 20px 20px 20px;
+            text-align: center;
+        }
 
-    header[role="banner"] {
-      background-color: var(--primary-color);
-      color: white;
-      padding: 40px 20px;
-      text-align: center;
-    }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
 
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
+        header p {
+            font-size: 1.2rem;
+            margin-top: 10px;
+        }
 
-    header p {
-      font-size: 1.2rem;
-      margin-top: 10px;
-    }
+        .digital-sign-container {
+            width: 100%;
+            overflow: hidden;
+            background-color: #111;
+            padding: 0.75rem 0;
+            margin-top: 0.5rem;
+            border-top: 2px solid #333;
+            border-bottom: 2px solid #333;
+        }
 
-    main[role="main"] {
-      max-width: 800px;
-      margin: -40px auto 40px auto;
-      padding: 30px;
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
+        .digital-sign-text {
+            display: inline-block;
+            white-space: nowrap;
+            color: #00FF00;
+            font-size: 1.4rem;
+            font-family: 'VT323', monospace;
+            padding-left: 100%;
+            animation: scrollDigital 10s linear infinite;
+            text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0;
+        }
 
-    main h2 {
-      margin-bottom: 20px;
-      color: var(--primary-color);
-    }
+        .cursor {
+            animation: blinkCursor 1s steps(2, start) infinite;
+            margin-left: 4px;
+        }
 
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
+        @keyframes scrollDigital {
+            0% {
+                transform: translateX(0%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
 
-    label {
-      font-weight: bold;
-      margin-bottom: -10px;
-    }
+        @keyframes blinkCursor {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0;
+            }
+        }
 
-    input, button {
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
+        .digital-sign-container:hover .digital-sign-text {
+            animation-play-state: paused;
+        }
 
-    button {
-      background-color: var(--primary-color);
-      color: white;
-      cursor: pointer;
-      transition: background-color 0.2s ease;
-    }
+        .search-section {
+            background-color: white;
+            max-width: 800px;
+            margin: -20px auto 40px auto;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        }
 
-    button:hover {
-      background-color: #003388;
-    }
+        .search-section h2 {
+            margin-bottom: 20px;
+            color: #004aad;
+        }
 
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-      padding: 20px;
-    }
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
 
-    .feature {
-      background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      flex: 1 1 250px;
-      max-width: 300px;
-      text-align: center;
-    }
+        input, select, button {
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            font-size: 1rem;
+        }
 
-    .feature h3 {
-      margin-bottom: 10px;
-      color: var(--primary-color);
-    }
+        button {
+            background-color: #004aad;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.2s ease;
+        }
 
-    footer[role="contentinfo"] {
-      text-align: center;
-      padding: 20px;
-      background-color: var(--primary-color);
-      color: white;
-    }
+        button:hover {
+            background-color: #003388;
+        }
 
-    .digital-sign-container {
-      width: 100%;
-      overflow: hidden;
-      background-color: #111;
-      padding: 0.75rem 0;
-      margin-top: 0.5rem;
-      border-top: 2px solid #333;
-      border-bottom: 2px solid #333;
-    }
+        .features {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            padding: 20px;
+        }
 
-    .digital-sign-text {
-      display: inline-block;
-      white-space: nowrap;
-      color: var(--neon-green);
-      font-size: 1.4rem;
-      font-family: 'VT323', monospace;
-      padding-left: 100%;
-      animation: scrollDigital 10s linear infinite;
-      text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0;
-    }
+        .feature {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            flex: 1 1 250px;
+            max-width: 300px;
+            text-align: center;
+        }
 
-    @keyframes scrollDigital {
-      0% { transform: translateX(0%); }
-      100% { transform: translateX(-100%); }
-    }
-  </style>
+        .feature h3 {
+            margin-bottom: 10px;
+            color: #004aad;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #004aad;
+            color: white;
+        }
+    </style>
 </head>
+
+
+    <header>
+              <div class="digital-sign-container" id="digitalBanner">
+            <div class="digital-sign-text" id="digitalText">
+                🚌 SWISS(HRE) LEAVING 19:00"<span class="cursor">_</span>
+            </div>
+        </div>
+        <h1>HambaOnline</h1>
+        <p>Book buses quickly and easily across Southern Africa</p>
+    </header>
 <body>
 
-  <div class="digital-sign-container" aria-label="Live departures">
-    <div class="digital-sign-text">
-      LEAVING(JHB)! 🚌 SWISS(BYO)-19:00 🚌 MZANSI(BYO)-20:00 🚌 INTERCAPE(BYO)-21:00 
-    </div>
-  </div>
 
-  <header role="banner">
-    <h1>HambaOnline</h1>
-    <p>Book buses quickly and easily across Southern Africa</p>
-  </header>
 
-  <main role="main">
-    <h2>Find Your Bus</h2>
-    <form>
-      <label for="from">From</label>
-      <input type="text" id="from" name="from" placeholder="e.g. Capetown" required>
+    <section class="search-section">
+        <h2>Find Your Bus</h2>
+        <form>
+            <input type="text" placeholder="From (e.g. Capetown)" required />
+            <input type="text" placeholder="To (e.g. Johannesburg)" required />
+            <input type="date" required />
+            <button type="submit">Search Buses</button>
+        </form>
+    </section>
 
-      <label for="to">To</label>
-      <input type="text" id="to" name="to" placeholder="e.g. Johannesburg" required>
+    <section class="features">
+        <div class="feature">
+            <h3>Compare Routes</h3>
+            <p>Easily compare multiple routes and fares to choose the best option.</p>
+        </div>
+        <div class="feature">
+            <h3>Trusted Operators</h3>
+            <p>We work only with vetted, reliable bus companies.</p>
+        </div>
+        <div class="feature">
+            <h3>Instant Booking</h3>
+            <p>Reserve and pay for your seat in just a few clicks.</p>
+        </div>
+    </section>
 
-      <label for="date">Date of Travel</label>
-      <input type="date" id="date" name="date" required>
+    <footer>
+        &copy; 2025 HambaOnline. All rights reserved.
+    </footer>
 
-      <button type="submit">Search Buses</button>
-    </form>
-  </main>
+    <script>
+        const messages = [
+            "🚌 SWISS(BYO) LEAVING 19:00",
+            "🚌 MZANSI(BYO) BOARDING NOW",
+            "🚌 INTERCAPE(LUSAKA) DELAYED by 20 mins",
+            "🚌 EAGLE LINER(BYO) ON TIME 20:00 ✅",
+            "🚌 SWISS(LUSAKA) DEPARTS 21:00"
+        ];
 
-  <section class="features" aria-label="Site features">
-    <div class="feature">
-      <h3>Compare Routes</h3>
-      <p>Easily compare multiple routes and fares to choose the best option.</p>
-    </div>
-    <div class="feature">
-      <h3>Trusted Operators</h3>
-      <p>We work only with vetted, reliable bus companies.</p>
-    </div>
-    <div class="feature">
-      <h3>Instant Booking</h3>
-      <p>Reserve and pay for your seat in just a few clicks.</p>
-    </div>
-  </section>
+        const textElement = document.getElementById('digitalText');
+        const cursorSpan = document.createElement('span');
+        cursorSpan.classList.add('cursor');
+        cursorSpan.textContent = '_';
 
-  <footer role="contentinfo">
-    &copy; 2025 HambaOnline. All rights reserved.
-  </footer>
+        let index = 0;
 
+        function updateMessage() {
+            textElement.innerHTML = messages[index] + cursorSpan.outerHTML;
+            index = (index + 1) % messages.length;
+        }
+
+        setInterval(updateMessage, 10000); // every 10 seconds
+    </script>
 </body>
 </html>
